--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -12,7 +12,7 @@
                 </li>
             </ul>
         }
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav">```
             <li class="dropdown">
                 <a id="drop2" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">You <b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
