extract category_name column from entryModel and put it into a separate table(table_category)

--- a/app/views/todolist/showalllists.scala.html
+++ b/app/views/todolist/showalllists.scala.html
@@ -1,19 +1,19 @@
-@(categoryList: List[String], account_id_in_session: String)
+@(categoryNameList: List[CategoryModel], account_id_in_session: String)
 
 @import helper._
 @import helper.twitterBootstrap._
 
 @headline = {
-    Lists!
+    @categoryNameList.size Lists!
     <small><a href="#"></a></small>
 }
 
 @header(Html(""), title = "Posts")
 @main(headline, nav = "", account_id_in_session) {
-    @if(categoryList != null && categoryList.size() > 0){
+    @if(categoryNameList != null && categoryNameList.size() > 0){
         <div class="row">
-            @categoryList.map { category_name =>
-                @views.html.todolist.alistuponshowalllists(category_name)}
+            @categoryNameList.map { categoryModel =>
+                @views.html.todolist.alistuponshowalllists(categoryModel)}
         </div>
     }
 }
