--- a/app/views/todolist/alistuponshowalllists.scala.html
+++ b/app/views/todolist/alistuponshowalllists.scala.html
@@ -1,12 +1,10 @@
-@(category_name: String)
+@(categoryModel: CategoryModel)
 
 <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
         <img data-src="holder.js/300x200" alt="...">
         <div class="caption">
-            <h3>@category_name</h3>
-            <p>...</p>
-            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            <a href="#" class="btn btn-info btn-lg" role="button">@categoryModel.category_name</a>
         </div>
     </div>
 </div>
