--- a/app/views/todolist/alistuponshowalllists.scala.html
+++ b/app/views/todolist/alistuponshowalllists.scala.html
@@ -4,7 +4,7 @@
     <div class="thumbnail">
         <img data-src="holder.js/300x200" alt="...">
         <div class="caption">
-            <a href="#" class="btn btn-info btn-lg" role="button">@categoryModel.category_name</a>
+            <a href="@routes.TodoList.showAList(categoryModel.id)" class="btn btn-info btn-lg" role="button">@categoryModel.category_name</a>
         </div>
     </div>
 </div>
