--- a/app/views/todolist/newlist.scala.html
+++ b/app/views/todolist/newlist.scala.html
@@ -10,7 +10,7 @@
 @header(Html(""), title = "Create A Post")
 @main(headline, nav = "createAList", account_id_in_session) {
     @helper.form(action = routes.TodoList.generateAList, 'id -> "newCategoryForm") {
-        <input type="hidden" value="" name="selectCategoryValue" id="selectCategoryValue">
+        <input type="hidden" value="" name="list_format_id" id="list_format_id">
         <fieldset>
             <legend>Create a list</legend>
             @inputText(
@@ -22,15 +22,18 @@
         </fieldset>
 
         <fieldset>
-            <legend>Choose a category</legend>
-            <select data-placeholder="Choose categories..." id="list_format_id" style="width:350px;" class="chzn-select">
-                <option value=""></option>
-                @for(i <- listFormatModelList.indices){
-                <option value="@listFormatModelList.get(i).list_name">
-                    @listFormatModelList.get(i).list_name
-                </option>
-                }
-            </select>
+            @for(i <- listFormatModelList.indices){
+                <div class="radio">
+                    <label>
+                        @if(i == 0){
+                            <input type="radio" name="optionsRadios" class="optionsRadios" value="@listFormatModelList.get(0).id" checked>
+                        }else{
+                            <input type="radio" name="optionsRadios" class="optionsRadios" value="@listFormatModelList.get(i).id">
+                        }
+                        @listFormatModelList.get(i).list_name
+                    </label>
+                </div>
+            }
         </fieldset>
 
         <div class="actions">
@@ -43,22 +46,18 @@
 <script type="text/javascript">
     $(".chzn-select").chosen();
     $(".chzn-select-deselect").chosen({allow_single_deselect:true});
-    jQuery("#createPost").click(
-            function () {
-                var counter = 0, i = 0, data = "",
-                        input_obj = document.getElementsByTagName('li');
-                for (i = 0; i < input_obj.length; i++) {
-                    if (input_obj[i].className == 'result-selected') {
-                        counter++;
-                        data = data + " " + input_obj[i].innerHTML.trim();
-                    }
-                }
-                if (counter <= 0) {
-                    alert('There is no selection');
-                    return false;
-                }
-                $('input[id=selectCategoryValue]').val(data);
-                $('#createAPostForm').submit();
+    jQuery("#createAList").click(
+        function () {
+            var checkbox_selection = $("input[name='optionsRadios'][type='radio']:checked");
+            if(checkbox_selection.length==0)
+            {
+                alert("please choose a list");
+                return ;
             }
+            var data = checkbox_selection.val();
+            $('input[id=list_format_id]').val(data);
+            alert(data);
+            $('#newCategoryForm').submit();
+        }
     )
 </script>
